--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,30 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Python / build artifacts
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# PyInstaller / build
+build/
+dist/
+*.spec
+*.exe
+*.dll
+*.so
+*.dylib
+
+# pyinstaller temp / local pyc
+localpycs/
+base_library.zip
+
+# virtualenvs
+venv/
+.env
+
+# system
+.DS_Store
+Thumbs.db
